<resources>
    <string name="app_name">Invist</string>
    <string name="app_Logo">NOALogo</string>

    <string name="noAccount">Noch kein Konto?</string>
    <string name="register">Registrieren</string>
    <string name="login">Einloggen</string>
    <string name="noText"> </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Navigation Drawer öffnen</string>
    <string name="navigation_drawer_close">Navigation Drawer schliessen</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">Logout</string>
    <string name="hello">Hallo</string>

    <string name="blank"> </string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--Fields User-->
    <string name="firstname">Vorname*</string>
    <string name="lastname">Nachname*</string>
    <string name="Email">E-Mail*</string>
    <string name="Password">Passwort*</string>
    <string name="birthday">Geburtstag*</string>
    <string name="company">Arbeitgeber*</string>
    <string name="phone_number">Telefonummer</string>
    <string name="address">Adresse</string>
    <string name="postcode">PLZ</string>
    <string name="city">Ort</string>
    <string name="mandatoryField">*</string>
    <string name="loginEmail">E-Mail</string>
    <string name="loginPassword">Passwort</string>

    <!-- ErrorMessages -->
    <string name="notAllFieldsFilledError">Bitte alle Pflichtfelder ausfüllen</string>
    <string name="EmailAlreadyExist">Diese Email-Adresse wurde schon einem Konto zugewiesen</string>
    <string name="wrongEmaileOrPassword">Passwort oder E-Mail falsch</string>
    <string name="invalidFirstname">Ungültiger Vorname</string>
    <string name="invalidLastname">Ungültiger Nachname</string>
    <string name="invalidEmail">Ungültige Email</string>
    <string name="invalidPassword">Ungültiges Passwort (min. 6 Zeichen, mind 1 Sonderzeichen,\n Grossbuchstabe, Kleinbuchstabe, Zahl)</string>
    <string name="invalidBirthday">Ungültiger Geburtstag</string>
    <string name="invalidPhoneNumber">Ungültige Telefonnummer (Keine Abstände erlaubt)</string>
    <string name="invalidAddress">Ungültige Adresse</string>
    <string name="invalidCity">Ungültige Stadt</string>
    <string name="invalidPostCode">Ungültige Postleitzahl</string>


    <string-array name="companyArray">
        <item>NoserYoung</item>
        <item>Accenture</item>
        <item>TBZ</item>
        <item>Google</item>
        <item>Nine</item>
        <item>Six</item>
    </string-array>


</resources>